@@ -4,6 +4,7 @@ cod-tools (^/branches/feature/egle-additional-CODFlags)
     - COD::CIF::Data::CODFlags:
         - has_calc_sites() subroutine.
         - has_dummy_sites() subroutine.
+        - has_superspace_group() subroutine.
 
 cod-tools (unreleased)
 
